...
            children: [
              Container(
                padding: EdgeInsets.only(left: 20, right: 20),
                width: double.infinity,
                height: 55,
                child: RaisedButton(
                  key: Key("usd-to-btc-button"),
                  shape: RoundedRectangleBorder(
                      borderRadius: BorderRadius.circular(10)),
                  color: Colors.deepOrange[400],
                  child: Text('USD to BTC',
                      style: TextStyle(color: Colors.white, fontSize: 18)),
                  onPressed: () {
...
              SizedBox(height: 20),
              Container(
                padding: EdgeInsets.only(left: 20, right: 20),
                width: double.infinity,
                height: 55,
                child: RaisedButton(
                  key: Key("btc-to-usd-button"),
                  shape: RoundedRectangleBorder(
                      borderRadius: BorderRadius.circular(10)),
                  color: Colors.green,
                  child: Text('BTC to USD',
                      style: TextStyle(color: Colors.white, fontSize: 18)),
                  onPressed: () {
...
